slides/presentation/slides/03_kubernetes_concepts/code-examples/service-microservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-auth
spec:
  type: ClusterIP
  selector:
    app: api-auth
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
